--- a/test.html
+++ b/test.html
@@ -59,7 +59,7 @@
   </style>
 </head>
 <body>
-  <button id="startBtn" onclick="startAR()">Start AR Segmentation</button>
+  <button id="startBtn">Start AR Segmentation</button>
   <canvas id="maskCanvas"></canvas>
   <div id="info">Status: idle</div>
   <div id="glInfo"></div>
@@ -214,6 +214,10 @@
         log('Unexpected error: ' + e.message);
       }
     }
+
+    window.addEventListener('DOMContentLoaded', () => {
+      document.getElementById('startBtn').addEventListener('click', startAR);
+    });
   </script>
 </body>
 </html>
