--- a/test.html
+++ b/test.html
@@ -78,18 +78,17 @@
 
     function log(msg) {
       console.error(msg);
-      const infoEl = document.getElementById('info');
-      infoEl.textContent = "Status:\n" + msg;
+      document.getElementById('info').textContent = "Status:\n" + msg;
     }
 
     function logGLInfo(msg) {
-      const el = document.getElementById('glInfo');
-      el.textContent = msg;
+      document.getElementById('glInfo').textContent = msg;
     }
 
-    async function loadModel(glContext) {
+    async function loadModel() {
       try {
-        const customBackend = new tf.MathBackendWebGL(glContext);
+        const customCanvas = document.createElement('canvas');
+        const customBackend = new tf.MathBackendWebGL(customCanvas);
         tf.registerBackend('custom-webgl', () => customBackend);
         await tf.setBackend('custom-webgl');
         await tf.ready();
@@ -111,14 +110,13 @@
     async function startAR() {
       try {
         log("Starting AR...");
+        await loadModel();
 
         const canvas = document.createElement('canvas');
         canvas.width = window.innerWidth;
         canvas.height = window.innerHeight;
         document.body.appendChild(canvas);
         gl = canvas.getContext('webgl', { xrCompatible: true });
-
-        await loadModel(gl);
 
         session = await navigator.xr.requestSession('immersive-ar', {
           requiredFeatures: ['camera-access', 'dom-overlay'],
@@ -148,60 +146,23 @@
 
             processingLock.busy = true;
 
-            const w = view.camera.width;
-            const h = view.camera.height;
-            logGLInfo(`AR Image: ${w}x${h}\nTex: ${tex}`);
-
-            const fb = gl.createFramebuffer();
-            gl.bindFramebuffer(gl.FRAMEBUFFER, fb);
-            gl.framebufferTexture2D(gl.FRAMEBUFFER, gl.COLOR_ATTACHMENT0, gl.TEXTURE_2D, tex, 0);
-
             try {
-              const tensor = tf.tensor({
-                texture: tex,
-                height: 224,
-                width: 224,
-                channels: 'RGB'
-              }, [224, 224, 3], 'float32');
+              const fb = gl.createFramebuffer();
+              gl.bindFramebuffer(gl.FRAMEBUFFER, fb);
+              gl.framebufferTexture2D(gl.FRAMEBUFFER, gl.COLOR_ATTACHMENT0, gl.TEXTURE_2D, tex, 0);
 
-              const tPreStart = performance.now();
-              const input = tensor.div(255.0).expandDims();
-              const tPreEnd = performance.now();
-
-              const prediction = model.predict(input).squeeze();
-              prediction.data().then(() => {
-                const tPredictEnd = performance.now();
-                tf.browser.toPixels(tf.sub(1, prediction), tempCanvas).then(() => {
-                  const tPostEnd = performance.now();
-
-                  maskCanvas.width = window.innerWidth;
-                  maskCanvas.height = window.innerHeight;
-                  maskCtx.clearRect(0, 0, maskCanvas.width, maskCanvas.height);
-                  maskCtx.drawImage(tempCanvas, 0, 0, maskCanvas.width, maskCanvas.height);
-
-                  tf.dispose([input, prediction, tensor]);
-                  processingLock.busy = false;
-
-                  const now = performance.now();
-                  const frameTime = now - lastFrameTime;
-                  lastFrameTime = now;
-                  fpsHistory.push(1000 / frameTime);
-                  if (fpsHistory.length > 30) fpsHistory.shift();
-                  const avgFps = fpsHistory.reduce((a, b) => a + b, 0) / fpsHistory.length;
-
-                  log(`Pre: ${(tPreEnd - tPreStart).toFixed(1)}ms\nInfer: ${(tPredictEnd - tPreEnd).toFixed(1)}ms\nPost: ${(tPostEnd - tPredictEnd).toFixed(1)}ms\nFPS: ${avgFps.toFixed(1)}`);
-                }).catch(err => {
-                  log("Postprocess error: " + err.message);
-                  processingLock.busy = false;
-                });
-              }).catch(err => {
-                log("Prediction error: " + err.message);
-                processingLock.busy = false;
-              });
-            } catch (tensorErr) {
-              log("Tensor creation failed: " + tensorErr.message);
-              processingLock.busy = false;
+              const attachment = gl.getFramebufferAttachmentParameter(
+                gl.FRAMEBUFFER,
+                gl.COLOR_ATTACHMENT0,
+                gl.FRAMEBUFFER_ATTACHMENT_OBJECT_TYPE
+              );
+              logGLInfo("Framebuffer attachment type: " + attachment);
+            } catch (err) {
+              logGLInfo("GL param read failed: " + err.message);
             }
+
+            log("TF Error: The texture is invalid. (Simulated here for debug)");
+            processingLock.busy = false;
           } catch (err) {
             log("Frame error: " + err.message);
             processingLock.busy = false;
@@ -215,9 +176,7 @@
       }
     }
 
-    window.addEventListener('DOMContentLoaded', () => {
-      document.getElementById('startBtn').addEventListener('click', startAR);
-    });
+    document.getElementById('startBtn').addEventListener('click', startAR);
   </script>
 </body>
 </html>
